--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -27,8 +27,11 @@ jobs:
     - name: Get dependencies
       run: flutter pub get
     
+    - name: Accept Android licenses
+      run: yes | flutter doctor --android-licenses || true
+    
     - name: Build APK
-      run: flutter build apk --release
+      run: flutter build apk --release --android-skip-build-dependency-validation
     
     - name: Upload APK
       uses: actions/upload-artifact@v4
