--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/setup-java@v4
       with:
         distribution: 'zulu'
-        java-version: '17'
+        java-version: '11'
     
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
@@ -24,14 +24,14 @@ jobs:
         flutter-version: '3.35.3'
         channel: 'stable'
     
+    - name: Clean build
+      run: flutter clean
+    
     - name: Get dependencies
       run: flutter pub get
     
-    - name: Accept Android licenses
-      run: yes | flutter doctor --android-licenses || true
-    
     - name: Build APK
-      run: flutter build apk --release --android-skip-build-dependency-validation
+      run: flutter build apk --release
     
     - name: Upload APK
       uses: actions/upload-artifact@v4
