--- a/.github/workflows/build-apk-simple.yml
+++ b/.github/workflows/build-apk-simple.yml
@@ -31,7 +31,7 @@ jobs:
       run: flutter pub get
     
     - name: Build APK (Simple)
-      run: flutter build apk --release --split-per-abi
+      run: flutter build apk --release
     
     - name: Upload APK
       uses: actions/upload-artifact@v4
